integration_tests/codegen_fail/fail/scalar/derive_input/derive_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/derive_input/derive_invalid_url.rs:4:30
  |
4 | #[graphql(specified_by_url = "not an url", transparent)]
  |                              ^^^^^^^^^^^^
